# proposal-ppt

./: .env.example  .gitignore  app.py  pyproject.toml  requirements.txt  run.bat
modules/: ai_analyzer.py  gist_uploader.py  html_renderer.py  ppt_generator.py  slack_client.py  template_analyzer.py  web_analyzer.py  web_renderer.py  web_scraper.py
